@@ -853,7 +853,7 @@ public class NumberOperations {
     }
 
     /**
-     * Creates a new Long taking its value (possibly clamped)
+     * Creates a new Long taking its value
      * from {@code source}
      *
      * @param source the value to copy
@@ -874,13 +874,18 @@ public class NumberOperations {
      * @return a new Float object
      */
     private static Float newFloat(Number source) {
-        float value = floatValue(source);
-        return Float.valueOf(value);
+        double value = doubleValue(source);
+        if (value < Float.MIN_VALUE) {
+            value = Float.MIN_VALUE;
+        } else if (value > Float.MAX_VALUE) {
+            value = Float.MAX_VALUE;
+    }
+
+        return new Float((float) value);
     }
 
     /**
-     * Creates a new Double taking its value (possibly clamped)
-     * from {@code source}
+     * Creates a new Double taking its value from {@code source}
      *
      * @param source the value to copy
      *
